--- a/app/src/main/res/layout/dialog_choose_enlarger_add_item.xml
+++ b/app/src/main/res/layout/dialog_choose_enlarger_add_item.xml
@@ -4,8 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginStart="8dp"
-    android:layout_marginEnd="8dp"
+    android:paddingHorizontal="8dp"
     android:paddingVertical="16dp"
     android:orientation="horizontal"
     android:foreground="?android:attr/selectableItemBackground"
