--- a/app/src/main/res/layout/fragment_enlargers.xml
+++ b/app/src/main/res/layout/fragment_enlargers.xml
@@ -28,6 +28,8 @@
                     android:id="@+id/enlarger_profile_list"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:clipToPadding="false"
+                    android:paddingBottom="128dp"
                     app:layoutManager="LinearLayoutManager"/>
             </FrameLayout>
         </LinearLayout>
