--- a/app/src/main/res/layout/fragment_enlarger_edit.xml
+++ b/app/src/main/res/layout/fragment_enlarger_edit.xml
@@ -110,6 +110,15 @@
                 app:icon="@drawable/ic_add"
                 android:visibility="visible" />
 
+            <TextView
+                android:id="@+id/memoAddTestExposures"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/form_vertical_margin"
+                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
+                android:text="@string/note_add_test_exposures"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />
+
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/layoutTestExposures"
                 android:layout_width="match_parent"
