--- a/app/src/main/res/layout/dialog_choose_enlarger_add_item.xml
+++ b/app/src/main/res/layout/dialog_choose_enlarger_add_item.xml
@@ -1,29 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingHorizontal="8dp"
-    android:paddingVertical="16dp"
-    android:orientation="horizontal"
     android:foreground="?android:attr/selectableItemBackground"
-    android:clickable="true">
-
-    <ImageView
-        android:id="@+id/imageViewAddIcon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:paddingHorizontal="8dp"
-        android:paddingVertical="4dp"
-        app:srcCompat="@drawable/ic_add_dark" />
-
+    android:clickable="true"
+    android:focusable="true">
     <TextView
         android:id="@+id/textViewAddLabel"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
+        android:paddingHorizontal="8dp"
+        android:paddingVertical="20dp"
+        android:orientation="horizontal"
         android:text="@string/action_add_enlarger_profile"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
-</LinearLayout>
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:drawableStart="@drawable/ic_add_dark"
+        android:drawablePadding="8dp" />
+</FrameLayout>
