--- a/app/src/main/res/layout/enlarger_profile_item.xml
+++ b/app/src/main/res/layout/enlarger_profile_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
+<layout xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
@@ -17,27 +17,25 @@
             type="org.logicprobe.printsizer.ui.enlargers.EnlargerProfileClickCallback" />
     </data>
 
-    <LinearLayout
+    <FrameLayout
         android:id="@+id/enlargerProfileItem"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingHorizontal="8dp"
-        android:paddingVertical="8dp"
         android:foreground="?android:attr/selectableItemBackground"
-        android:background="@drawable/background_selectable_item"
-        android:clipChildren="false"
-        android:clipToPadding="false"
         android:clickable="true"
+        android:focusable="true"
         android:onClick="@{() ->  callback.onClick(enlargerProfile)}">
 
         <RelativeLayout
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:paddingHorizontal="16dp"
+            android:paddingVertical="8dp"
+            android:background="@drawable/background_selectable_item"
             android:clipChildren="false"
-            android:clipToPadding="false">
+            android:clipToPadding="false"
+            tools:ignore="UselessParent">
 
             <TextView
                 android:id="@+id/name"
@@ -84,8 +82,6 @@
                     android:id="@+id/typeChip"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:layout_alignParentBottom="true"
                     app:ensureMinTouchTargetSize="false"
                     android:clickable="false"
                     android:checkable="false"
@@ -101,8 +97,9 @@
                     android:layout_height="wrap_content"
                     android:src="@android:drawable/stat_notify_error"
                     android:tint="@color/errorColor"
+                    android:contentDescription="@string/error_enlarger_profile_invalid"
                     android:visibility="@{profileError ? View.VISIBLE : View.GONE}" />
             </LinearLayout>
         </RelativeLayout>
-    </LinearLayout>
+    </FrameLayout>
 </layout>
