--- a/app/src/main/res/menu/menu_profile_list.xml
+++ b/app/src/main/res/menu/menu_profile_list.xml
@@ -5,10 +5,10 @@
         android:id="@+id/action_copy"
         android:icon="@drawable/ic_copy"
         android:title="@string/action_copy"
-        app:showAsAction="always" />
+        app:showAsAction="ifRoom" />
     <item
         android:id="@+id/action_delete"
         android:icon="@drawable/ic_delete"
         android:title="@string/action_delete"
-        app:showAsAction="always" />
+        app:showAsAction="ifRoom" />
 </menu>
