--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -8,4 +8,12 @@
         app:key="enlarger_height_units"
         app:title="@string/label_enlarger_height_units"
         app:useSimpleSummaryProvider="true" />
+    <ListPreference
+        android:icon="@drawable/ic_exposure"
+        app:defaultValue="half_stops"
+        app:entries="@array/exposure_increments_entires"
+        app:entryValues="@array/exposure_increments_values"
+        app:key="exposure_increments"
+        app:title="@string/label_exposure_increments"
+        app:useSimpleSummaryProvider="true" />
 </PreferenceScreen>
