--- a/app/src/main/res/layout/dialog_choose_enlarger_add_item.xml
+++ b/app/src/main/res/layout/dialog_choose_enlarger_add_item.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:foreground="?android:attr/selectableItemBackground"
@@ -15,6 +17,6 @@
         android:orientation="horizontal"
         android:text="@string/action_add_enlarger_profile"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:drawableStart="@drawable/ic_add_dark"
+        app:drawableStartCompat="@drawable/ic_add_dark"
         android:drawablePadding="8dp" />
 </FrameLayout>
