--- a/app/src/main/res/layout/enlarger_profile_item.xml
+++ b/app/src/main/res/layout/enlarger_profile_item.xml
@@ -96,7 +96,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@android:drawable/stat_notify_error"
-                    android:tint="@color/errorColor"
+                    app:tint="@color/errorColor"
                     android:contentDescription="@string/error_enlarger_profile_invalid"
                     android:visibility="@{profileError ? View.VISIBLE : View.GONE}" />
             </LinearLayout>
