--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="UnusedResources">
     <color name="primaryColor">#ff6d00</color>
     <color name="primaryLightColor">#ff9e40</color>
     <color name="primaryDarkColor">#c43c00</color>
