Change default exposure comp increment to full stops
This makes first-launch behavior a bit more consistent, without
requiring the home fragment to have a specific default baked in.

--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -10,7 +10,7 @@
         app:useSimpleSummaryProvider="true" />
     <ListPreference
         android:icon="@drawable/ic_exposure"
-        app:defaultValue="half_stops"
+        app:defaultValue="full_stops"
         app:entries="@array/exposure_increments_entries"
         app:entryValues="@array/exposure_increments_values"
         app:key="exposure_increments"
